[project]
license = "Apache 2.0"
readme = "README.md"

[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"


[tool.flit.metadata]
module = "rasa_language"
classifiers = ["License :: OSI Approved :: Apache Software License"]
author = "Ícaro Pires e João Robson"
requires = [
    "lark-parser",
]

[tool.flit.scripts]
rasa_language = "rasa_language.__main__:main"
