[project]
license = "Apache 2.0"
readme = "README.md"

[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"


[tool.flit.metadata]
module = "rasa_language"
classifiers = ["License :: OSI Approved :: Apache Software License"]
author = "Ícaro Pires e João Robson"
home-page = "https://github.com/icaropires/rasa-chatbot-description-language"
requires = [
    "lark-parser>=0.7.8",
    "Click>=7.0",
    "colorama>=0.4.3",
    "PyYAML==5.2"
]

[tool.flit.scripts]
rasa_language = "rasa_language.__main__:main"
